public abstract class Exercise {
    public ExerciseType exerciseType;

    public Type getExerciseType() {
        return exerciseType.getType();
    }
}
