public interface ExerciseType {

    public String type = "";

    public Type getType();
    public String getDescription();
    public String getTutorialUrl();
}
