public enum Sport {

    FOOTBALL,
    BASKETBALL,
    RUNNING,
    VOLLEYBALL
}
