@startuml diagram
abstract class Exercise {
    + exerciseType : ExerciseType
    + getExerciseType()
}

interface ExerciseType {
    + type : Type
    + getType()
    + getDescription()
    + getTutorialUrl()
}


class OutdoorExercise extends Exercise {
    - name : String
    - preferredTerrain : String
    + getExerciseDataSummary()
    + getExerciseTutorialUrl()
}

class IndoorExercise extends Exercise {
    - name : String
    + getExerciseDataSummary()
    + getExerciseTutorialUrl()
}



class GeneralExercise implements ExerciseType{
    - type : Type
    - name : String
    - difficulty : ExerciseDifficulty
    - description : String
    - duration : int
    - preferredTerrain : String
    - tutorialUrl : String
    --
    + getType()
    + getDescription()
    + getTutorialUrl()
    --
    getters and setters...
}

class SportExercise implements ExerciseType{
    - type : Type
    - name : String
    - sport : Sport
    - difficulty : ExerciseDifficulty
    - description : String
    - duration : int
    - preferredTerrain : String
    - tutorialUrl : String
    --
    + getType()
    + getDescription()
    + getTutorialUrl()
    --
    getters and setters...
}

class RehabilitationExercise implements ExerciseType{
    - type : Type
    - name : String
    - difficulty : ExerciseDifficulty
    - assistanceNeeded : boolean
    - description : String
    - duration : int
    - preferredTerrain : String
    - tutorialUrl : String
    --
    + getType()
    + getDescription()
    + getTutorialUrl()
    --
    getters and setters...
}


enum ExerciseDifficulty{
    BEGINNER
    INTERMEDIATE
    ADVANCED
    PROFESSIONAL
}

enum Type{
    GENERAL
    SPORT
    REHABILITATION
}

enum Sport{
    FOOTBALL
    BASKETBALL
    RUNNING
    VOLLEYBALL

}

Exercise o--right|> ExerciseType
GeneralExercise --> ExerciseDifficulty
SportExercise --> ExerciseDifficulty
SportExercise --> Sport
RehabilitationExercise --> ExerciseDifficulty
GeneralExercise --> Type
SportExercise --> Type
RehabilitationExercise --> Type
ExerciseType --> Type

@enduml
